fix search engine selection menu z-index

--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -96,6 +96,7 @@ input#search
 {
   /* 默认不可见 */
   display: none; 
+  z-index: 1;
 
   background-color: var(--color-bg);
   border-radius: 5px;
